--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": "0.4",
   "name": "mcp-server-sdlxliff",
   "display_name": "SDLXLIFF Translation Editor",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "description": "Read, review, and edit SDL Trados SDLXLIFF translation files with Claude. Supports inline tag preservation, pagination, and atomic saves with backup.",
   "long_description": "An MCP server for working with SDLXLIFF translation files (SDL Trados Studio format). Features include:\n\n- Extract translation segments with source/target text and status\n- Update translations with automatic tag preservation\n- Paginated reading for large files\n- Atomic writes with automatic backup\n- Statistics and segment filtering\n\nDesigned for use with Claude Cowork to review and correct translations.",
   "author": {
@@ -14,7 +14,7 @@
     "entry_point": "src/mcp_server_sdlxliff/__main__.py",
     "mcp_config": {
       "command": "uv",
-      "args": ["run", "${__dirname}/src/mcp_server_sdlxliff/__main__.py"]
+      "args": ["run", "--directory", "${__dirname}", "-m", "mcp_server_sdlxliff"]
     }
   },
   "compatibility": {
