--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "mcp-server-sdlxliff"
-version = "0.9.0"
+version = "1.0.0"
 description = "MCP server for parsing, reading, and modifying SDLXLIFF translation files (SDL Trados Studio format)"
 readme = "README.md"
 license = { text = "MIT" }
@@ -52,6 +52,18 @@ Issues = "https://github.com/EugeneAnt/mcp-server-sdlxliff/issues"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.sdist]
+exclude = [
+    "desktop/",
+    "ai/",
+    "tests/",
+    "internal/",
+    "sample/",
+    ".git/",
+    ".venv/",
+    "*.mcpb",
+]
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/mcp_server_sdlxliff"]
