--- a/desktop/package.json
+++ b/desktop/package.json
@@ -28,11 +28,11 @@
 		"vite": "^7.2.6"
 	},
 	"dependencies": {
-		"@anthropic-ai/sdk": "^0.71.2",
 		"@tauri-apps/api": "^2.9.1",
 		"@tauri-apps/plugin-dialog": "^2.6.0",
 		"@tauri-apps/plugin-fs": "^2.2.0",
 		"@tauri-apps/plugin-http": "^2.5.6",
-		"@tauri-apps/plugin-shell": "^2.3.4"
+		"@tauri-apps/plugin-shell": "^2.3.4",
+		"@tauri-apps/plugin-store": "^2.4.2"
 	}
 }
