--- a/desktop/src-tauri/Cargo.toml
+++ b/desktop/src-tauri/Cargo.toml
@@ -27,3 +27,7 @@ tauri-plugin-shell = "2"
 tauri-plugin-dialog = "2"
 tauri-plugin-fs = "2"
 tauri-plugin-http = "2"
+tauri-plugin-store = "2"
+reqwest = { version = "0.12", features = ["stream", "json"] }
+tokio = { version = "1", features = ["sync"] }
+futures = "0.3"
