--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ classifiers = [
 dependencies = [
     "lxml>=5.0.0",
     "mcp>=1.0.0",
+    "pyspellchecker>=0.8.0",
 ]
 
 [project.optional-dependencies]
